--- a/src/assets/language/en.json
+++ b/src/assets/language/en.json
@@ -1,160 +1,190 @@
 {
-    "starup.wjxzsb": "文件下载失败",
-    "starup.wjjysb": "文件解压失败",
-    "starup.sbjccg": "设备检测成功",
-    "starup.qzjqr": "轻舟机器人",
-    "starup.sbztjc": "设备状态检测",
-    "starup.jcjqrzt": "检查机器人状态",
-    "starup.jcrjzy": "检查软件资源",
-    "starup.gxrjzy": "更新软件资源",
-    "starup.szzdxx": "设置站点信息",
-    "starup.jcdwxtt": "检查定位系统图",
-    "starup.qqszfw": "请去设置画面执行【充电桩复位",
-    "starup.xtsz": "系统设置",
-    "starup.yc": "异常",
-    "starup.cs": "重试",
-    "index.kjsc": "快捷送餐",
-    "index.ddsc": "多点送餐",
-    "index.yl": "引领",
-    "index.xy": "巡游",
-    "index.ylsc": "引领送餐",
-    "index.sqcd": "收起菜单",
-    "index.fh": "返航",
-    "index.jqrdqdw": "当前机器人定位：",
-    "index.sz": "设置",
-    "index.wxzzd": "未选择站点",
-    "index.tpc": "托盘层",
-    "index.qxzdw": "请选择点位",
-    "index.dxdw": "点选点位",
-    "index.xcz": "选餐桌",
-    "index.xbj": "选包间",
-    "index.xgrw": "修改任务",
-    "index.ljcf": "立即出发",
-    "index.qk": "清空",
-    "index.wzdsj": "无站点数据",
-    "index.zdysx": "站点已失效",
-    "index.xydt": "巡游地图",
-    "index.qh": "切换",
-    "index.xhxy": "循环巡游",
-    "index.acxy": "按次巡游",
-    "index.xylxxz": "巡游路线选择",
-    "index.szxycs": "设置巡游次数",
-    "index.qx": "取消",
-    "index.qd": "确定",
-    "setting.jcsz": "基础设置",
-    "setting.sysz": "声音设置",
-    "setting.scsz": "送餐设置",
-    "setting.xysz": "巡游设置",
-    "setting.szgl": "设置管理",
-    "setting.tcsz": "退出设置",
-    "setting.cyms": "常用模式",
-    "setting.ztsz": "字体设置",
-    "setting.szztdx": "设置字体大小",
-    "setting.xhzt": "小号字体",
-    "setting.zhzt": "中号字体",
-    "setting.dhzt": "大号字体",
-    "setting.zymsxs": "主页模式显示",
-    "setting.jrcjzs": "进入车机app展示的页面",
-    "setting.fhdmd": "返航待命点",
-    "setting.cjfhsfhwz": "车机返航所返回的点位",
-    "setting.cdzxz": "充电桩选择",
-    "setting.xzjqrcdz": "选择机器人充电桩",
-    "setting.hzcd": "回桩充电",
-    "setting.zymssz": "主页模式设置",
-    "setting.dmdxz": "待命点选择",
-    "setting.ylnr": "引领内容",
-    "setting.sykz": "声音控制",
-    "setting.bjyy": "背景音乐",
-    "setting.bbyy": "播报语言",
-    "setting.bzts": "避障提示",
-    "setting.bjyyxz": "背景音乐选择",
-    "setting.tpsz": "托盘设置",
-    "setting.sztpcs": "设置托盘的层数和高度",
-    "setting.sztp": "设置托盘",
-    "setting.pstlsj": "配送停留时间",
-    "setting.ddqwdddsc": "到达取物点等待时长",
-    "setting.psztsc": "配送暂停时长",
-    "setting.zthdjssc": "暂停后倒计时时长",
-    "setting.xzsd": "行走速度",
-    "setting.szjqrswxssd": "设置机器人送物时行驶速度",
-    "setting.yiceng": "一层",
-    "setting.erceng": "二层",
-    "setting.sanceng": "三层",
-    "setting.siceng": "四层",
-    "setting.zslbdcg": "总高度超长",
-    "setting.ddslsz": "灯带高度设置",
-    "setting.ge": "个",
-    "setting.miao": "秒",
-    "setting.fenzhong": "分钟",
-    "setting.zdms": "自动模式",
-    "setting.sdms": "手动模式",
-    "setting.cqapp": "重启APP",
-    "setting.cdzfw": "充电桩复位",
-    "setting.xgcg": "修改成功",
-    "setting.xmmyymmxt": "新密码与原密码相同",
-    "setting.lcsrmmbxt": "两次输入密码不相同",
-    "setting.ymmbzq": "原密码不正确",
-    "setting.qwsggnr": "请完善更改内容",
-    "setting.bjgn": "便捷功能",
-    "setting.dyysz": "多语言设置",
-    "setting.qhyy": "切换语言",
-    "setting.glymm": "管理员密码",
-    "setting.xgmm": "修改密码",
-    "setting.xtxx": "系统信息",
-    "setting.jqrsn": "机器人SN",
-    "setting.jqrbb": "机器人版本",
-    "setting.jqrdpbb": "机器人底盘版本",
-    "setting.zwsj": "暂无数据",
-    "setting.sftz": "是否跳转至车机建图app",
-    "setting.fou": "否",
-    "setting.shi": "是",
-    "setting.ymm": "原密码",
-    "setting.xmm": "新密码",
-    "setting.zcsrmm": "再次输入新密码",
-    "setting.qsrymm": "请输入原密码",
-    "setting.qsrxmm": "请输入新密码",
-    "setting.xrxmm": "确认新密码",
-    "setting.dyylb": "多语言列表",
-    "setting.tuichu": "退出",
-    "setting.mmyz": "密码验证",
-    "setting.jqrlx": "机器人类型",
-    "setting.jqrbssj": "机器人部署时间",
+    "starup.wjxzsb": "File download failed",
+    "starup.wjjysb": "File decompression failed",
+    "starup.sbjccg": "Equipment detection succeeded",
+    "starup.qzjqr": "Delivery Robot",
+    "starup.sbztjc": "Equipment status detection",
+    "starup.jcjqrzt": "Check robot status",
+    "starup.jcrjzy": "Check software resources",
+    "starup.gxrjzy": "Update software resources",
+    "starup.szzdxx": "Set site info",
+    "starup.jcdwxtt": "Check position system",
+    "starup.qqszfw": "Please go to setting to [reset charging pile]",
+    "starup.xtsz": "System setting",
+    "starup.yc": "Abnormal",
+    "starup.cs": "Retry",
+    "starup.ts": "Reminder",
+    "starup.tg": "Jump",
+    "starup.qdsbzts": "No more reminder at startup",
+    "starup.jcdwlkwf": "No WIFI is connected, whether enter WIFI connection setting",
+    "starup.wjcdkywl": "No available network is detected, try again, or enter WIFI setting",
+    "index.kjsc": "Quick",
+    "index.ddsc": "Multi-Point",
+    "index.yl": "Non-Stop",
+    "index.xy": "Cruise",
+    "index.ylsc": "Non-Stop",
+    "index.sqcd": "Collapse menu",
+    "index.fh": "Return",
+    "index.jqrdqdw": "Current robot position:",
+    "index.sz": "Setting",
+    "index.wxzzd": "No site is selected",
+    "index.tpc": "Layer",
+    "index.qxzdw": "Please select a point",
+    "index.dxdw": "Click on the point",
+    "index.xcz": "Choose table",
+    "index.xbj": "Choose room",
+    "index.xgrw": "Change task",
+    "index.ljcf": "Start",
+    "index.qk": "Clear",
+    "index.wzdsj": "No site data",
+    "index.zdysx": "The site is invalid",
+    "index.xydt": "Cruise map",
+    "index.qh": "Switch",
+    "index.xhxy": "Repeat cruise",
+    "index.acxy": "Cruise times",
+    "index.xylxxz": "Cruise route",
+    "index.szxycs": "Set cruise times",
+    "index.qx": "Cancel",
+    "index.qd": "Confirm",
+    "setting.jcsz": "Basic setting",
+    "setting.sysz": "Music setting",
+    "setting.scsz": "Delivery setting",
+    "setting.xysz": "Cruise setting",
+    "setting.szgl": "Setting management",
+    "setting.tcsz": "Exit setting",
+    "setting.cyms": "Common mode",
+    "setting.ztsz": "Fonts",
+    "setting.szztdx": "Font size",
+    "setting.xhzt": "Small",
+    "setting.zhzt": "Medium",
+    "setting.dhzt": "Large",
+    "setting.zymsxs": "Mode display",
+    "setting.jrcjzs": "Enter APP display page",
+    "setting.fhdmd": "Return to standby",
+    "setting.cjfhsfhwz": "Return to designated point",
+    "setting.cdzxz": "Choose charging pile",
+    "setting.xzjqrcdz": "Choose robot charging pile",
+    "setting.hzcd": "Return to charging pile",
+    "setting.zymssz": "Home page mode selection",
+    "setting.dmdxz": "Choose standby point",
+    "setting.ylnr": "Guide content",
+    "setting.sykz": "Volume control",
+    "setting.bjyy": "BGM",
+    "setting.bbyy": "Broadcast speech",
+    "setting.bzts": "Obstacle reminder",
+    "setting.bjyyxz": "Choose BGM",
+    "setting.tpsz": "Layer setting",
+    "setting.sztpcs": "Set layer number and height",
+    "setting.sztp": "Set layers",
+    "setting.pstlsj": "Delivery countdown time",
+    "setting.ddqwdddsc": "Waiting time at pickup point",
+    "setting.psztsc": "Cruise pause time",
+    "setting.zthdjssc": "Countdown time after pause",
+    "setting.xzsd": "Walking speed",
+    "setting.szjqrswxssd": "Set delivery walking speed",
+    "setting.yiceng": "1st",
+    "setting.erceng": "2nd",
+    "setting.sanceng": "3rd",
+    "setting.siceng": "4th",
+    "setting.zslbdcg": "Exceeded total height limit",
+    "setting.ddslsz": "Light belt height",
+    "setting.ge": "",
+    "setting.miao": "Sec",
+    "setting.fenzhong": "Min",
+    "setting.zdms": "Auto mode",
+    "setting.sdms": "Manual mode",
+    "setting.cqapp": "Restart APP",
+    "setting.cdzfw": "Reset",
+    "setting.xgcg": "Modification succeeded",
+    "setting.xmmyymmxt": "Same password as the old one",
+    "setting.lcsrmmbxt": "Two passwords do not match",
+    "setting.ymmbzq": "Password is incorrect",
+    "setting.qwsggnr": "Please complete the changes",
+    "setting.bjgn": "Quick functions",
+    "setting.dyysz": "Language setting",
+    "setting.qhyy": "Switch language",
+    "setting.glymm": "Admin password",
+    "setting.xgmm": "Change password",
+    "setting.xtxx": "System info",
+    "setting.jqrsn": "Robot SN",
+    "setting.jqrbb": "Robot version",
+    "setting.jqrdpbb": "Robot chassis version",
+    "setting.zwsj": "No data",
+    "setting.sftz": "Whether jump to mapping APP",
+    "setting.fou": "No",
+    "setting.shi": "Yes",
+    "setting.ymm": "Old password",
+    "setting.xmm": "New password",
+    "setting.zcsrmm": "Confirm password",
+    "setting.qsrymm": "Please enter old password",
+    "setting.qsrxmm": "Please enter new password",
+    "setting.xrxmm": "Confirm the new password",
+    "setting.dyylb": "Language list",
+    "setting.tuichu": "Exit",
+    "setting.mmyz": "Password verification",
+    "setting.jqrlx": "Robot type",
+    "setting.jqrbssj": "Robot deployment time",
     "setting.wlan": "WLAN",
-    "setting.jqrsdkbb": "机器人SDK版本",
-    "crash.nyax": "您已按下",
-    "crash.jtan": "急停按钮",
-    "crash.kyzytxjqr": "可以自由推行机器人",
-    "crash.jxrw": "继续任务",
-    "crash.fhcs": "返回充电",
-    "crash.yddm": "原地待命",
-    "crash.fhdmd": "返回待命点",
-    "abnormal.jqrztyc": "机器人状态异常",
-    "abnormal.qjjqrtz": "请将机器人推至充电桩重启",
-    "abnormal.cq": "重启",
-    "nav.kx": "空闲",
-    "nav.rwz": "任务中",
-    "nav.jqrdqzt": "机器人当前状态",
-    "task.xyz": "巡游中",
-    "task.xyyzt": "巡游已暂停",
-    "task.scz": "送餐中",
-    "task.xyydd": "巡游已到达",
-    "task.ztxyrwz": "暂停巡游任务中",
-    "task.djpmjxxy": "点击屏幕继续巡游",
-    "task.dsjsz": "倒数计时中",
-    "task.jsrw": "结束任务",
-    "task.sfwccz": "是否完成操作",
-    "task.wc": "完成",
-    "task.ztrwz": "暂停任务中",
-    "task.djpmjxps": "点击屏幕继续配送",
-    "task.rwlb": "任务列表",
-    "task.tqq": "提前取",
-    "task.ceng": "层",
-    "task.tuopan": "托盘",
-    "task.liji": "立即",
-    "task.quchu": "取出",
-    "task.yqc": "已取出",
-    "task.tiqian": "提前",
-    "task.lkjsz": "离开计时中",
-    "task.ljqc": "立即取餐",
-    "task.qqc": "请取餐"
+    "setting.jqrsdkbb": "Robot SDK version",
+    "setting.mmcwqxsr": "Wrong password, please enter again",
+    "crash.nyax": "You have pressed",
+    "crash.jtan": "Emergency Button",
+    "crash.kyzytxjqr": "You can push the robot",
+    "crash.jxrw": "Continue task",
+    "crash.fhcs": "Charge",
+    "crash.yddm": "Stay",
+    "crash.fhdmd": "Standby",
+    "abnormal.jqrztyc": "Robot abnormal",
+    "abnormal.qjjqrtz": "Please push the robot to the charging pile and restart",
+    "abnormal.cq": "Restart",
+    "nav.kx": "Vacant",
+    "nav.rwz": "In the task",
+    "nav.jqrdqzt": "Robot current status",
+    "task.xyz": "Cruising",
+    "task.xyyzt": "Cruise paused",
+    "task.scz": "Delivering",
+    "task.xyydd": "Cruise arrived",
+    "task.ztxyrwz": "Pausing cruise task",
+    "task.djpmjxxy": "Click the screen to resume cruising",
+    "task.dsjsz": "Countdown",
+    "task.jsrw": "End task",
+    "task.sfwccz": "Whether finish operation",
+    "task.wc": "Complete",
+    "task.ztrwz": "Pausing the task",
+    "task.djpmjxps": "Click the screen to resume delivery",
+    "task.rwlb": "Task list",
+    "task.tqq": "Get now",
+    "task.ceng": "Layer",
+    "task.tuopan": "Layer",
+    "task.liji": "Immediately",
+    "task.quchu": "Pickup",
+    "task.yqc": "Already picked up",
+    "task.tiqian": "In advance",
+    "task.lkjsz": "Countdown to leave",
+    "task.ljqc": "Pickup at once",
+    "task.qqc": "Please pickup",
+    "task.jtms": "Emergency mode",
+    "wifi.zzgb": "Closing",
+    "wifi.zzdk": "Opening",
+    "wifi.xyb": "Next",
+    "wifi.mmcw": "Wrong password",
+    "wifi.zzlj": "Connecting",
+    "wifi.qsrmm": "Please enter password",
+    "wifi.wjwl": "Forget network",
+    "wifi.lj": "Connect",
+    "wifi.ylj": "Connected",
+    "setting.gxdt": "Update map",
+    "setting.cdzfwcg": "Charging pile reset success",
+    "setting.sfcqcjApp": "Whether restart robot App",
+    "setting.yjfh": "Return",
+    "setting.dkxtsz": "Open setting",
+    "abnormal.xzdzsb": "Failed to access charging pile",
+    "abnormal.qbwthcdz": "Please push me back to charging pile",
+    "abnormal.ytztdz": "Pushed to charging pile",
+    "abnormal.xzkzl": "I am stucked",
+    "abnormal.qtwyb": "Please push me",
+    "abnormal.qbwtcdtw": "Please push me out of the lift",
+    "wifi.mmcdbndy": "Password should be no less than 8 digits",
+    "wifi.ljcs": "Connection timeout",
+    "setting.fhz": "Returning"
 }
