--- a/src/assets/language/zh-cn.json
+++ b/src/assets/language/zh-cn.json
@@ -9,15 +9,20 @@
     "starup.gxrjzy": "更新软件资源",
     "starup.szzdxx": "设置站点信息",
     "starup.jcdwxtt": "检查定位系统图",
-    "starup.qqszfw": "请去设置画面执行【充电桩复位",
+    "starup.qqszfw": "请去设置画面执行【充电桩复位】",
     "starup.xtsz": "系统设置",
     "starup.yc": "异常",
     "starup.cs": "重试",
+    "starup.ts": "提示",
+    "starup.tg": "跳过",
+    "starup.qdsbzts": "启动时不再提示",
+    "starup.jcdwlkwf": "检测到未连接WIFI，是否进入WIFI连接设置",
+    "starup.wjcdkywl": "未检测可用网络，重试，或进行WIFI设置",
     "index.kjsc": "快捷送餐",
     "index.ddsc": "多点送餐",
-    "index.yl": "引领",
+    "index.yl": "直达",
     "index.xy": "巡游",
-    "index.ylsc": "引领送餐",
+    "index.ylsc": "直达",
     "index.sqcd": "收起菜单",
     "index.fh": "返航",
     "index.jqrdqdw": "当前机器人定位：",
@@ -65,7 +70,7 @@
     "setting.ylnr": "引领内容",
     "setting.sykz": "声音控制",
     "setting.bjyy": "背景音乐",
-    "setting.bbyy": "播报语言",
+    "setting.bbyy": "播报语音",
     "setting.bzts": "避障提示",
     "setting.bjyyxz": "背景音乐选择",
     "setting.tpsz": "托盘设置",
@@ -73,7 +78,7 @@
     "setting.sztp": "设置托盘",
     "setting.pstlsj": "配送停留时间",
     "setting.ddqwdddsc": "到达取物点等待时长",
-    "setting.psztsc": "配送暂停时长",
+    "setting.psztsc": "巡游暂停时长",
     "setting.zthdjssc": "暂停后倒计时时长",
     "setting.xzsd": "行走速度",
     "setting.szjqrswxssd": "设置机器人送物时行驶速度",
@@ -81,7 +86,7 @@
     "setting.erceng": "二层",
     "setting.sanceng": "三层",
     "setting.siceng": "四层",
-    "setting.zslbdcg": "总高度超长",
+    "setting.zslbdcg": "灯带总长度最长不能超过76",
     "setting.ddslsz": "灯带高度设置",
     "setting.ge": "个",
     "setting.miao": "秒",
@@ -121,6 +126,7 @@
     "setting.jqrbssj": "机器人部署时间",
     "setting.wlan": "WLAN",
     "setting.jqrsdkbb": "机器人SDK版本",
+    "setting.mmcwqxsr": "密码错误，请重新输入",
     "crash.nyax": "您已按下",
     "crash.jtan": "急停按钮",
     "crash.kyzytxjqr": "可以自由推行机器人",
@@ -156,5 +162,29 @@
     "task.tiqian": "提前",
     "task.lkjsz": "离开计时中",
     "task.ljqc": "立即取餐",
-    "task.qqc": "请取餐"
+    "task.qqc": "请取餐",
+    "task.jtms": "急停模式",
+    "wifi.zzgb": "正在关闭",
+    "wifi.zzdk": "正在打开",
+    "wifi.xyb": "下一步",
+    "wifi.mmcw": "密码错误",
+    "wifi.zzlj": "正在连接",
+    "wifi.qsrmm": "请输入密码",
+    "wifi.wjwl": "忘记网络",
+    "wifi.lj": "连接",
+    "wifi.ylj": "已连接",
+    "setting.gxdt": "更新地图",
+    "setting.cdzfwcg": "充电桩复位成功",
+    "setting.sfcqcjApp": "是否重启车机App",
+    "setting.yjfh": "一键返航",
+    "setting.dkxtsz": "打开系统设置",
+    "abnormal.xzdzsb": "小舟对桩失败",
+    "abnormal.qbwthcdz": "请把我推回充电桩",
+    "abnormal.ytztdz": "已推至充电桩",
+    "abnormal.xzkzl": "小舟卡住了",
+    "abnormal.qtwyb": "请推我一把",
+    "abnormal.qbwtcdtw": "请把我推出电梯外",
+    "wifi.mmcdbndy": "密码长度不低于8位",
+    "wifi.ljcs": "连接超时",
+    "setting.fhz": "返航中"
 }
