--- a/src/assets/language/zh-tw.json
+++ b/src/assets/language/zh-tw.json
@@ -9,15 +9,20 @@
     "starup.gxrjzy": "更新軟件資源",
     "starup.szzdxx": "設置站點信息",
     "starup.jcdwxtt": "檢查定位系統圖",
-    "starup.qqszfw": "請去設置畫面執行【充電樁複位",
+    "starup.qqszfw": "請去設置畫面執行【充電樁復位】",
     "starup.xtsz": "系統設置",
     "starup.yc": "異常",
     "starup.cs": "重試",
+    "starup.ts": "提示",
+    "starup.tg": "跳過",
+    "starup.qdsbzts": "啟動時不再提示",
+    "starup.jcdwlkwf": "檢測到未連接WIFI，是否進入WIFI連接設置",
+    "starup.wjcdkywl": "未檢測可用網絡，重試，或進行WIFI設置",
     "index.kjsc": "快捷送餐",
     "index.ddsc": "多點送餐",
     "index.yl": "引領",
     "index.xy": "巡遊",
-    "index.ylsc": "引領送餐",
+    "index.ylsc": "直达",
     "index.sqcd": "收起菜單",
     "index.fh": "返航",
     "index.jqrdqdw": "當前機器人定位：",
@@ -65,7 +70,7 @@
     "setting.ylnr": "引領內容",
     "setting.sykz": "聲音控制",
     "setting.bjyy": "背景音樂",
-    "setting.bbyy": "播報語言",
+    "setting.bbyy": "播報語音",
     "setting.bzts": "避障提示",
     "setting.bjyyxz": "背景音樂選擇",
     "setting.tpsz": "托盤設置",
@@ -73,23 +78,23 @@
     "setting.sztp": "設置托盤",
     "setting.pstlsj": "配送停留時間",
     "setting.ddqwdddsc": "到達取物點等待時長",
-    "setting.psztsc": "配送暫停時長",
+    "setting.psztsc": "巡游暫停時長",
     "setting.zthdjssc": "暫停後倒計時時長",
     "setting.xzsd": "行走速度",
     "setting.szjqrswxssd": "設置機器人送物時行駛速度",
-    "setting.yiceng": "壹層",
+    "setting.yiceng": "一層",
     "setting.erceng": "二層",
     "setting.sanceng": "三層",
     "setting.siceng": "四層",
-    "setting.zslbdcg": "总高度超长",
+    "setting.zslbdcg": "灯带总长度最长不能超过76",
     "setting.ddslsz": "燈帶高度設置",
     "setting.ge": "個",
     "setting.miao": "秒",
-    "setting.fenzhong": "分鍾",
+    "setting.fenzhong": "分鐘",
     "setting.zdms": "自動模式",
     "setting.sdms": "手動模式",
-    "setting.cqapp": "重啓APP",
-    "setting.cdzfw": "充電樁複位",
+    "setting.cqapp": "重啟APP",
+    "setting.cdzfw": "充電樁復位",
     "setting.xgcg": "修改成功",
     "setting.xmmyymmxt": "新密碼與原密碼相同",
     "setting.lcsrmmbxt": "兩次輸入密碼不相同",
@@ -121,6 +126,7 @@
     "setting.jqrbssj": "機器人部署時間",
     "setting.wlan": "WLAN",
     "setting.jqrsdkbb": "機器人SDK版本",
+    "setting.mmcwqxsr": "密碼錯誤，請重新輸入",
     "crash.nyax": "您已按下",
     "crash.jtan": "急停按鈕",
     "crash.kyzytxjqr": "可以自由推行機器人",
@@ -129,8 +135,8 @@
     "crash.yddm": "原地待命",
     "crash.fhdmd": "返回待命點",
     "abnormal.jqrztyc": "機器人狀態異常",
-    "abnormal.qjjqrtz": "請將機器人推至充電樁重啓",
-    "abnormal.cq": "重啓",
+    "abnormal.qjjqrtz": "請將機器人推至充電樁重啟",
+    "abnormal.cq": "重啟",
     "nav.kx": "空閑",
     "nav.rwz": "任務中",
     "nav.jqrdqzt": "機器人當前狀態",
@@ -156,5 +162,29 @@
     "task.tiqian": "提前",
     "task.lkjsz": "離開計時中",
     "task.ljqc": "立即取餐",
-    "task.qqc": "請取餐"
+    "task.qqc": "請取餐",
+    "task.jtms": "急停模式",
+    "wifi.zzgb": "正在關閉",
+    "wifi.zzdk": "正在打開",
+    "wifi.xyb": "下一步",
+    "wifi.mmcw": "密碼錯誤",
+    "wifi.zzlj": "正在連接",
+    "wifi.qsrmm": "請輸入密碼",
+    "wifi.wjwl": "忘記網絡",
+    "wifi.lj": "連接",
+    "wifi.ylj": "已連接",
+    "setting.gxdt": "更新地圖",
+    "setting.cdzfwcg": "充電樁復位成功",
+    "setting.sfcqcjApp": "是否重啟車機App",
+    "setting.yjfh": "一鍵返航",
+    "setting.dkxtsz": "打开系統設置",
+    "abnormal.xzdzsb": "小舟對樁失敗",
+    "abnormal.qbwthcdz": "請把我推回充電樁",
+    "abnormal.ytztdz": "已推至充電樁",
+    "abnormal.xzkzl": "小舟卡住了",
+    "abnormal.qtwyb": "請推我一把",
+    "abnormal.qbwtcdtw": "請把我推出電梯外",
+    "wifi.mmcdbndy": "密碼長度不低於8位",
+    "wifi.ljcs": "連接超時",
+    "setting.fhz": "返航中"
 }
